# mindbase_layer

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: cli_design.md  skill_design.md
scripts/: DocumentIndex.ipynb  audio_splitter.py  chat.py  cloud_audio_summarizer.py  extract_audio.py  facetime_streaming.py  mic_streaming.py  pdf_to_md.py  prepare_skill.py  retrieval.py  whisper_to_srt.py  youtube_download.py
src/mindbase_layer/: SKILL.md  agent.py  tools.py
src/mindbase_layer/agent_core/: llm_adapter.py  memory_layer.py  prompts.py
src/mindbase_layer/utils/: audio.py  common.py  formatting.py  pdf_to_md.py  retrieve_md.py  youtube.py
